--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "concurrently \"react-scripts start\" \"cd backend && nodemon server\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
